--- a/pom.xml
+++ b/pom.xml
@@ -5,17 +5,10 @@
 	<artifactId>chartserver</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<!-- Repository for TSNE artifact -->
-	<repositories>
-		<repository>
-			<id>jitpack.io</id>
-			<url>https://jitpack.io</url>
-		</repository>
-	</repositories>
-
 
 	<properties>
-
+                
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- Web Server -->
 		<naonohttpd.version>2.2.0</naonohttpd.version>
 		<nanohttpd-nanolets.version>2.3.1</nanohttpd-nanolets.version>
@@ -32,9 +25,6 @@
 		<httpclient.version>4.5.5</httpclient.version>
 		<gson.version>2.8.2</gson.version>
 
-		<!-- TSNE Version -->
-		<tsne.version>2.5.0</tsne.version>
-
 		<!-- Testing -->
 		<junit.version>4.12</junit.version>
 		
@@ -48,16 +38,6 @@
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-math3</artifactId>
-			<version>${commons-math3.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.jujutsu.tsne</groupId>
-			<artifactId>tsne</artifactId>
-			<version>${tsne.version}</version>
-		</dependency>
 		<dependency>
 			<groupId>org.nanohttpd</groupId>
 			<artifactId>nanohttpd</artifactId>
