--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
 
 	<properties>
-                
+
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- Web Server -->
 		<naonohttpd.version>2.2.0</naonohttpd.version>
@@ -27,7 +27,7 @@
 
 		<!-- Testing -->
 		<junit.version>4.12</junit.version>
-		
+
 		<!-- Testing -->
 		<nanohttpd-websocket.version>2.3.0</nanohttpd-websocket.version>
 
@@ -44,9 +44,14 @@
 			<version>${naonohttpd.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.nanohttpd</groupId>
-			<artifactId>nanohttpd-websocket</artifactId>
-			<version>${nanohttpd-websocket.version}</version>
+			<groupId>org.java-websocket</groupId>
+			<artifactId>Java-WebSocket</artifactId>
+			<version>1.3.8</version>
+		</dependency>
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>7.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.tinylog</groupId>
@@ -62,6 +67,12 @@
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 			<version>${commons-cli.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty.websocket</groupId>
+			<artifactId>websocket-client</artifactId>
+			<version>9.3.0.M2</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.nanohttpd</groupId>
