--- a/pom.xml
+++ b/pom.xml
@@ -27,14 +27,19 @@
 
 		<!-- Testing -->
 		<junit.version>4.12</junit.version>
+		
+		<Java-WebSocket.version>1.3.8</Java-WebSocket.version>
 
-		<!-- Testing -->
-		<nanohttpd-websocket.version>2.3.0</nanohttpd-websocket.version>
-
+		<!-- Template engine -->
+		<jtwig-core.version>5.86.1.RELEASE</jtwig-core.version>
+		
+		<!-- Java EE version -->
+		<javaee-api.version>7.0</javaee-api.version>
+		
 		<!-- Compiler and Java Version -->
 		<maven-compiler-version>3.1</maven-compiler-version>
-		<java-source-version>1.8</java-source-version>
-		<java-target-version>1.8</java-target-version>
+		<java-source.version>1.8</java-source.version>
+		<java-target.version>1.8</java-target.version>
 	</properties>
 
 	<dependencies>
@@ -46,12 +51,13 @@
 		<dependency>
 			<groupId>org.java-websocket</groupId>
 			<artifactId>Java-WebSocket</artifactId>
-			<version>1.3.8</version>
+			<version>${Java-WebSocket.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
-			<version>7.0</version>
+			<version>${javaee-api.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.tinylog</groupId>
@@ -69,12 +75,6 @@
 			<version>${commons-cli.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.jetty.websocket</groupId>
-			<artifactId>websocket-client</artifactId>
-			<version>9.3.0.M2</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.nanohttpd</groupId>
 			<artifactId>nanohttpd-nanolets</artifactId>
 			<version>${nanohttpd-nanolets.version}</version>
@@ -90,6 +90,11 @@
 			<version>${gson.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.jtwig</groupId>
+			<artifactId>jtwig-core</artifactId>
+			<version>${jtwig-core.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
@@ -102,11 +107,11 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${java-source.version}</source>
+					<target>${java-target.version}</target>
 				</configuration>
 			</plugin>
-			
+
 		</plugins>
 	</build>
 </project>
